# mandarinki-app

./: README.md  docker-compose.yml
backend/: Dockerfile  config.py  main.py  pyproject.toml
backend/dependencies/: container.py
backend/models/: ml.py  request_model.py
backend/repositories/: ml.py
backend/routes/: ml.py
backend/services/: ml.py
