[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["jotty <bard143games@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
dependency-injector = "^4.41.0"
sqlalchemy = "^2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
